Fix broken logo path on privacy policy page

--- a/privacy.html
+++ b/privacy.html
@@ -156,7 +156,7 @@
                 <a href="privacy.html">PRIVACY POLICY</a>
             </div>
             <div class="copyright">
-                <img src="assets/NN-G_logo_black.svg" alt="NN-G Logo" class="nn-logo">
+                <img src="assets/NN_logo_black.svg" alt="NN-G Logo" class="nn-logo">
                 2026
             </div>
         </footer>
