Update contact email to hello@newnostalgia.org across all pages

--- a/privacy.html
+++ b/privacy.html
@@ -122,7 +122,7 @@
                 <li>The right to opt out of having your information sold (we do not sell information)</li>
             </ul>
 
-            <p>To exercise any of these rights, please contact us at <strong>wwwnewnostalgia@gmail.com</strong>.</p>
+            <p>To exercise any of these rights, please contact us at <strong>hello@newnostalgia.org</strong>.</p>
 
 
             <h2>5. How to Unsubscribe</h2>
@@ -144,7 +144,7 @@
 
             <p>If you have any questions about this Privacy Policy or your personal information, please contact us at:</p>
 
-            <p><strong>wwwnewnostalgia@gmail.com</strong><br>
+            <p><strong>hello@newnostalgia.org</strong><br>
              <a href="https://newnostalgia.org">www.newnostalgia.org</a></p>
         </div>
         
@@ -152,7 +152,7 @@
             <div class="footer-links">
                 <a href="index.html">HOME</a>
                 <a href="about.html">ABOUT</a>
-                <a href="mailto:wwwnewnostalgia@gmail.com">CONTACT</a>
+                <a href="mailto:hello@newnostalgia.org">CONTACT</a>
                 <a href="privacy.html">PRIVACY POLICY</a>
             </div>
             <div class="copyright">
