--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         <footer>
             <div class="footer-links">
                 <a href="index.html">HOME</a>
-                <a href="mailto:wwwnewnostalgia@gmail.com">CONTACT</a>
+                <a href="mailto:hello@newnostalgia.org">CONTACT</a>
                 <a href="privacy.html">PRIVACY POLICY</a>
             </div>
             <div class="copyright">
