--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <footer>
             <div class="footer-links">
                 <a href="about.html">ABOUT</a>
-                <a href="mailto:wwwnewnostalgia@gmail.com">INQUIRE</a>
+                <a href="mailto:hello@newnostalgia.org">INQUIRE</a>
                 <a href="privacy.html">PRIVACY POLICY</a>
             </div>
             <div class="copyright">
