--- a/staging.html
+++ b/staging.html
@@ -191,7 +191,7 @@
         <footer>
             <div class="footer-links">
                 <a href="about.html">ABOUT</a>
-                <a href="mailto:wwwnewnostalgia@gmail.com">INQUIRY</a>
+                <a href="mailto:hello@newnostalgia.org">INQUIRY</a>
                 <a href="privacy.html">PRIVACY POLICY</a>
             </div>
             <div class="copyright">
