Change privacy-content paragraph font size to 14px

--- a/privacy.html
+++ b/privacy.html
@@ -45,6 +45,11 @@
             margin-bottom: 20px;
         }
         
+        /* Override font size for paragraphs */
+        .privacy-content p {
+            font-size: 14px;
+        }
+        
         .privacy-content hr {
             margin: 30px auto;
             border: none;
