--- a/privacy.html
+++ b/privacy.html
@@ -157,7 +157,7 @@
             <div class="footer-links">
                 <a href="index.html">HOME</a>
                 <a href="about.html">ABOUT</a>
-                <a href="mailto:hello@newnostalgia.org">CONTACT</a>
+                <a href="mailto:hello@newnostalgia.org">INQUIRE</a>
                 <a href="privacy.html">PRIVACY POLICY</a>
             </div>
             <div class="copyright">
